# quantum-sensors-tdm

./: .gitignore  README.md  bitbucket-pipelines.yml  setup.cfg  setup.py
adr_gui/: .gitignore  __init__.py  adrTempMonitorGui.py  adr_gui.py  adr_gui.ui  adr_gui_control.py  adr_gui_settings.txt  daqinfo.py  examine_log.py  examine_log_with_alt.py  horton_health.py  labeledRangedEdit.py  lakeshore_advanced.ui  matplotlibCanvas.py  parse_adr_log.py  signal_example.py  tempControl.py
adr_system/: __init__.py  adr_system.py  adr_system_setup.conf  adr_system_setup.sample.xml  adr_system_setup_velma.xml  setup.py
cringe/: .gitignore  .pkl  __init__.py  cringe.py  cringe_control.py  emu_card.py  how_to_run_with_trace  setup.py  whichslope.py  zmq_rep.py
detchar/: __init__.py  acquire.py  alias.config  alias.py  bluebox_setvolt.py  complexImedpanceAcquire.py  czAcquire.py  foo.py  galen_iv copy.py  galen_iv.py  galen_iv2.py  iv.config  ivCurve.py  ivCurveAcquire.py  ivCurveAquire.py  ivCurveMulticol.py  iv_analysis.py  iv_data.py  iv_foo.py  iv_sweep_test.json  iv_util.py  iv_utils.py  ivtest.json  noise.py  polcal.py  polcal_filterv3.py  starter_script.py  sweeper.py  tcTickleAquire.py  tc_down.config  tc_up.config  tesacquire.py  tesanalyze.py  tespickle.py  test_iv_analysis.py  test_iv_analysis_with_g.py  test_json_readwrite.py  test_polcal_data  tools.py  tower.config
doc/: autotune_doc.md  tdm_term  tdm_term_ssrl
ggui/: scanner.py  statetest.py  yotest
he3adr_gui/: dataplot_line.py  dataplot_mpl.py  kcg  kcg-gui.desktop  kcg.py  kcg_test.py  kcg_ui.py  kcg_ui.ui  kpac.py  read_data.py  task.py  testappender  thread_test.py
(+303 files in other folders)
