[metadata]
name = quantum-sensors-tdm
version = 0.1.0
decription = Software to help run a NIST TDM system with Python 3
url = https://github.com/usnistgov/quantum-sensors-tdm
author = "Joe Fowler, Galen O'Neil, others"
author_email = oneilg@nist.gov
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8
packages =
    quantum-sensors-tdm

install_requires =
    argparse
    dataclasses_json
    ipython
    LabJackPython
    lmfilt
    lxml
    matplotlib
    numpy
    progress
    PyQt5
    pySerial
    pytest
    pytest-qt
    pyvisa
    scipy
    zmq

[autopep8]
max-line-length = 135
exclude = build,nonstandard,*_form_ui.py

[pycodestyle]
max-line-length = 135
exclude = build,nonstandard,*_form_ui.py
